--- a/styles/style.css
+++ b/styles/style.css
@@ -113,3 +113,35 @@ color:#252432;
     border-radius: 20px;
 }
 
+/* section-2 */
+.sec-section{
+    background-color: rgb(77,71,255,0.25 );
+    border-radius: 10px;
+     padding: 50px 80px;
+     gap:10px ;
+     margin-top: 115px;
+}
+
+
+.heading{
+    text-align: center;
+    font-size: 38px;
+    font-weight: bold;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+   
+}
+.about-item{
+    font-size: 80px;
+    font-weight: bold;
+    color:#4E47FF;
+
+}
+.item-title{
+    font-size: 20px;
+    color: rgb(0, 0, 0, 0.5);
+}
+
