--- a/styles/style.css
+++ b/styles/style.css
@@ -185,3 +185,60 @@ color:#252432;
     border-radius: 50%;
 }
 
+/* section-4 */
+.fourth-section{
+    height: 700px;
+    background-color: #FFFFFF;
+    padding: 71px 150px;
+}
+
+.div-fourth{
+    text-align: center;
+    gap: 20px;
+    
+}
+.heading3{
+    font-size: 50px;
+    font-weight: bold;
+}
+.para2{
+    color: rgb(0, 0, 0, 0.5);
+}
+.big-banner{
+    border-radius: 14px;
+}
+.banner-img{
+    display: flex;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+.heading4{
+    font-size: 97px;
+    font-weight: bold;
+    color: #000000;
+}
+
+/* section-5 */
+.information{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+.basic-info{
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+}
+.get-btn{
+    
+    background-color: #4E47FF;
+    color: #FFFFFF;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+
+
+}
+
+
+
